--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -1,4 +1,5 @@
 name: Release a new version
+run-name: Release version ${{ inputs.version }}
 
 on:
   workflow_dispatch:
@@ -48,7 +49,7 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-      - name: Create ~/.m2/settings.xml 
+      - name: Create ~/.m2/settings.xml
         shell: bash
         run: |
           cat <<EOF > ~/.m2/settings.xml
